# bokoup-program-library

./: .dockerignore  .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  TransportWebHID.8f15c93d.js  TransportWebHID.8f15c93d.js.map  TransportWebHID.b2bd4d50.js  TransportWebHID.b2bd4d50.js.map  TransportWebHID.cc2735fa.js  TransportWebHID.cc2735fa.js.map  blocto-sdk.umd.0bf84d29.js  blocto-sdk.umd.0bf84d29.js.map  blocto-sdk.umd.666cf8cc.js  blocto-sdk.umd.666cf8cc.js.map  blocto-sdk.umd.975bb629.js  blocto-sdk.umd.975bb629.js.map  deploy-api-tx.sh  deploy-demo-api.sh  esm.0c14d4a0.js  esm.0c14d4a0.js.map  esm.36ba4a51.js  esm.36ba4a51.js.map  esm.6b63683f.js  esm.6b63683f.js.map  esm.6cd2bcbc.js  esm.6cd2bcbc.js.map  esm.ae6b6a0f.js  esm.ae6b6a0f.js.map  esm.b3d1ae14.js  esm.b3d1ae14.js.map  index.0ab601ce.js  index.0ad3eb5b.js  index.144221d7.js  index.162c0691.js  index.17b79e90.js  index.1dcd79d1.js  index.28bffb36.js  (+55 more)
api-data/: Cargo.toml
api-data/metadata/devnet/: config.yaml
api-data/metadata/devnet/metadata/databases/postgres/tables/: public_auction_house.yaml  public_burn_delegated_promo_token.yaml  public_create_promo.yaml  public_delegate_promo_token.yaml  public_metadata.yaml  public_mint_promo_token.yaml  public_purchase_receipt.yaml  tables.yaml
api-data/metadata/localnet/metadata/databases/postgres/tables/: public_bid_receipt.yaml  public_create_promo_group.yaml  public_delegate_promo_token.yaml  public_listing_receipt.yaml  public_metadata.yaml  public_mint.yaml  public_promo.yaml  public_promo_group.yaml  public_token_account.yaml  tables.yaml
api-data/src/: lib.rs  main.rs
api-data/src/migrations/: V1__initial.sql  reset.sql
api-data/src/queries/bpl_token_metadata/: burn_delegated_promo_token.rs  burn_delegated_promo_token_upsert.sql  create_promo.rs  create_promo_group.rs  create_promo_group_upsert.sql  create_promo_upsert.sql  delegate_promo_token.rs  delegate_promo_token_upsert.sql  group.rs  mint_promo_token.rs  mint_promo_token_upsert.sql  mod.rs  promo.rs  promo_group.rs  promo_group_upsert.sql  promo_upsert.sql
api-data/src/queries/mpl_auction_house/: auction_house_upsert.sql  purchase_receipt.rs  purchase_receipt_upsert.sql
api-data/src/queries/mpl_token_metadata/: creator_delete.sql  metadata.rs  metadata_upsert.sql  mod.rs
api-data/src/queries/spl_token/: mint_upsert.sql  token_account.rs
api-tx/: Cargo.toml  README.md
api-tx/src/: error.rs  lib.rs  main.rs
api-tx/src/handlers/: burn_delegated_promo.rs  create_promo.rs  get_burn_delegated_promo_tx.rs  get_create_promo_group_tx.rs  get_create_promo_tx.rs  get_delegate_promo_tx.rs  get_mint_promo_tx.rs  mod.rs
api-tx/src/utils/: bundlr.rs  clover.rs  data.rs  mod.rs  solana.rs
demo/: .eslintrc.json  package.json
demo-api/: Cargo.toml
demo-api/src/: error.rs  lib.rs  main.rs  utils.rs
demo-api/src/handlers/: get_app_id.rs  get_burn_delegated_promo_tx.rs  get_delegate_promo_tx.rs  get_mint_promo1_tx.rs  get_mint_promo2_tx.rs  get_mint_promo_tx.rs  mod.rs
demo-api/src/utils/: mod.rs  solana.rs
demo-shopify/: .gitignore  .shopify-cli.yml  README.md
demo-shopify/nft-offers-extension-app/: README.md  package.json
demo-shopify/nft-offers-extension-app/.parcel-cache/: ffdc629ccf572e1f  lock.mdb
demo-web/: .env-old  .gitignore  README.md  package.json
demo-web-api/: Cargo.toml
demo-web-api/src/: error.rs  lib.rs
demo-web-api/src/handlers/: get_app_id.rs  get_burn_promo_tx.rs  get_mint_promo_tx.rs  mod.rs
demo-web-api/src/utils/: solana.rs
demo-web/src/: Store.tsx  index.css  index.html  index.tsx
demo/src/: App.tsx  Store.tsx  Theme.tsx  index.html  index.tsx
hasura/: Cargo.toml
hasura/metadata/devnet/metadata/databases/postgres/tables/: public_create_promo.yaml  public_delegate_promo_token.yaml  public_floor_price.yaml  public_listing_with_token.yaml  public_mint.yaml  public_promo.yaml  public_token_account.yaml
hasura/metadata/localnet/: config.yaml
hasura/metadata/localnet/metadata/databases/: databases.yaml
hasura/metadata/localnet/metadata/databases/postgres/tables/: public_token_account.yaml
hasura/metadata/metadata/databases/postgres/tables/: public_creator.yaml  public_delegate_promo_token.yaml  public_mint_relation.yaml  tables.yaml
hasura/src/: lib.rs  main.rs
hasura/src/migrations/: reset.sql
hasura/src/queries/bpl_token_metadata/: burn_delegated_promo_token.rs  burn_delegated_promo_token_upsert.sql  create_promo.rs  create_promo_upsert.sql  delegate_promo_token.rs  delegate_promo_token_upsert.sql  mint_promo_token.rs  mint_promo_token_upsert.sql  mod.rs  promo.rs  promo_upsert.sql
hasura/src/queries/mpl_auction_house/: auction_house.rs  bid_receipt.rs  bid_receipt_upsert.sql  listing_receipt.rs  listing_receipt_upsert.sql  mod.rs
hasura/src/queries/mpl_token_metadata/: creator.rs  creator_upsert.sql  metadata.rs  metadata_upsert.sql
hasura/src/queries/spl_token/: mint.rs  mod.rs  token_account_upsert.sql
hasura/src/schema/: schema.sql
indexer/: Cargo.toml  Config.json  README.md  bpl-indexer.service  nats-server.service
indexer/src/: lib.rs  main.rs  plugin.rs
indexer/src/accounts/: mod.rs  promo.rs
indexer/src/programs/: bpl_token_metadata.rs  mod.rs  mpl_auction_house.rs  mpl_token_metadata.rs  spl_token.rs
specifications/: README.md  token_metadata.md  transaction_server.md
specs/: README.md
storage/: Cargo.toml
storage/src/: main.rs
token-metadata/cli/: Cargo.toml
token-metadata/cli/src/: lib.rs  main.rs
token-metadata/js/: package.json  tsconfig.build.json  tsconfig.json
token-metadata/program/: Cargo.toml
token-metadata/program/src/: error.rs  lib.rs  state.rs  utils.rs
token-metadata/program/src/processor/: burn_delegated_promo_token.rs  burn_promo_token.rs  create_admin_settings.rs  create_group.rs  create_non_fungible.rs  create_promo.rs  create_promo_group.rs  delegate_promo_token.rs  mint_promo_token.rs  mod.rs  transfer_cpi.rs
token-metadata/program/tests/: integration_test.rs
validator-setup/: README.md  solana_server_setup.sh  solana_validator_setup.sh
(+38 files in other folders)
