[workspace]
members=[
  "demo-web-api",
  "indexer",
  "token-metadata/program",
  "hasura"
]

[workspace.dependencies]
anchor-client = "0.24.2"
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
base64 = "0.13.0"
bincode = "1.3.3"
bpl-token-metadata = { path = "./token-metadata/program"}
bs58 = "0.4.0"
dotenv = "0.15"
futures = "0.3"
mpl-auction-house = { version = "1.1.6", features = ["no-entrypoint"] }
mpl-token-metadata = "1.2.10"
reqwest = { version = "0.11.10",  features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
solana-geyser-plugin-interface = "1.9.20"
solana-logger = { version = "1.9.20" }
solana-program-test = "1.9.20"
solana-sdk = "1.9.20"
spl-token = "3.2.0"
thiserror = "1.0.23"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
url = "2.2.2"