[workspace]
members=[
  "api-data",
  "api-tx",
  "indexer",
  "storage",
  "token-metadata/program",
]

[workspace.dependencies]
anchor-client = "0.24.2"
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
clap = { version="3.2.22", features=["derive"] }
deadpool-postgres= "0.10.2"
dotenv = "0.15"
futures = "0.3"
log = "0.4.17"
mpl-auction-house = { version = "1.1.6", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.10", features = [ "no-entrypoint" ]}
reqwest = { version = "0.11.10",  features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
solana-geyser-plugin-interface = "1.9.20"
solana-logger = { version = "1.9.20" }
solana-program-test = "1.9.20"
solana-sdk = "1.9.20"
spl-token = "3.2.0"
thiserror = "1.0.23"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
url = "2.2.2"