[package]
name = "demo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
axum = "0.5.6"
base64 = "0.13.0"
bincode = "1.3.3"
bpl-token-metadata = { path = "../token-metadata/program" }
futures = "0.3"
reqwest = { version = "0.11.10",  features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
solana-sdk = "1.9.20"
spl-token = "3.2.0"
thiserror = "1.0.23"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.3", features = ["add-extension", "auth", "compression-full", "trace", "cors" ] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
url = "2.2.2"
urlencoding = "2.1.2"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15"