cargo-features = ["workspace-inheritance"]
[package]
name = "demo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
axum = "0.5.6"
base64 = { workspace = true }
bincode = { workspace = true }
bpl-token-metadata = { path = "../token-metadata/program" }
futures = "0.3"
reqwest = { version = "0.11.10",  features = ["json"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true}
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.3", features = ["add-extension", "auth", "compression-full", "trace", "cors" ] }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
url = { workspace = true}

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
dotenv = { workspace = true }