cargo-features = ["workspace-inheritance"]
[package]
name = "bpl-hasura"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-spl = { workspace = true }
bpl-token-metadata = { path = "../token-metadata/program" }
bs58 = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
log = "0.4.17"
mpl-auction-house = { workspace = true }
mpl-token-metadata = { workspace = true, features = [ "no-entrypoint" ] }
serde = { workspace = true, features = ["derive"]}
spl-token = { workspace = true }
tokio = { version = "1.18.2", features = ["full"] }
tokio-postgres = "=0.7.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
deadpool-postgres = { workspace = true }