[package]
name = "bpl-indexer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = { workspace = true }
bpl-token-metadata = { workspace = true }
bs58 = { workspace = true }
log = "0.4.17"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
smol = "1.2.5"
solana-geyser-plugin-interface = { workspace = true }
solana-logger = { workspace = true }

[dev-dependencies]
libc = "0.2.124"