cargo-features = ["workspace-inheritance"]
[package]
name = "bpl-indexer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bpl-hasura = { path = "../hasura" }
bpl-token-metadata = { path = "../token-metadata/program" }
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
mpl-auction-house = { workspace = true }
mpl-token-metadata = { workspace = true, features = [ "no-entrypoint" ] }
nats = "0.18"
serde = { workspace = true }
serde_bytes = "0.11.6"
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { version = "1.18.2", features = ["full"] }
tracing = {workspace = true }
tracing-subscriber = {workspace = true }

[dev-dependencies]
libc = "0.2.124"
