[package]
name = "bpl-indexer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
bincode = "1.3.3"
bpl-api-data = { path = "../api-data" }
bpl-token-metadata = { path = "../token-metadata/program" }
bs58 = "0.4.0"
clap = { version="3.2.22", features=["derive"] }
deadpool-postgres= "0.10.2"
dotenv = "0.15"
lazy_static = "1.4.0"
log = "0.4.17"
mpl-auction-house = { version = "1.1.6", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.10", features = [ "no-entrypoint" ]}
nats = "0.18"
serde = "1.0.130"
serde_bytes = "0.11.6"
serde_derive = "1.0.130"
serde_json = { version = "1.0.68", features = ["preserve_order"] }
solana-sdk = "1.9.20"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

[dev-dependencies]
libc = "0.2.124"
