[package]
name = "bpl-token-metadata-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.24.2"
anyhow = "1.0.58"
bs58 = "0.4.0"
bpl-api-tx = { path = "../../api-tx"}
bpl-token-metadata = { path = "../program" }
bundlr-sdk = { git = "https://github.com/CalebEverett/bundlr-rust-sdk", branch = "roll_back_primitive_type", features = ["solana"] }
clap = { version="3.2.22", features=["derive"] }
ed25519-dalek = "1.0.1"
dotenv = "0.15"
serde_json = "1.0.68"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
url = "2.2.2"

