[package]
name = "bpl-token-metadata"
version = "0.1.0"
description = "Token Metadata Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bpl_token_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = { workspace = true, features= ["init-if-needed"]  }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
anchor-client = { workspace = true }