[package]
name = "bpl-token-metadata"
version = "0.1.0"
description = "Token Metadata Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bpl_token_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = { version = "=0.24.2", features= ["init-if-needed"]  }
anchor-spl = { version = "=0.24.2" }
borsh = "0.9.3"
mpl-token-metadata = { version = "=1.2.10", features = [ "no-entrypoint" ] }
spl-memo = { version = "3.0.1", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = { version = "=1.9.20" }
anchor-client = { version = "=0.24.2"  }
tokio = { version = "1.0", features = ["full"] }
toml = "=0.5.9"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }